# internet-speedtest-pi

./: .bumpversion.cfg  .coveragerc  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  requirements.txt  run_internet_speedtest_pi.sh  run_speedtest.py  setup.py
docs/source/: conf.py  index.rst  installation.rst  usage.rst
internet_speedtest_pi/: __init__.py  internet_speedtest_pi.py
internet_speedtest_pi/config/: config.py  settings.toml
internet_speedtest_pi/misc/: data_logger.py  logger.py
tests/: test_internet_speedtest_pi.py
